# needleman_wunsch

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  needleman-wunsch  test.fasta
include/: align.h  common.h
src/: CMakeLists.txt  Makefile  align.cpp  common.cpp
